# OpenKJ

./: .gitignore  CMakeLists.txt  github  github.pub
.github/workflows/: auto-update-versions-from-tag.yml  codeql-analysis.yml  linux-testbuild.yml  macos-build.yml  macos-test.yml  windows-builds.yml  windows-test.yml
cd/: openkj32.iss  openkj64.iss
cmake/: macos_bundle_vlc.cmake
src/: bmdbdialog.cpp  bmdbdialog.h  dbupdater.cpp  dbupdater.h  dlgcdg.cpp  dlgcdg.h  dlgregularsingers.cpp  dlgregularsingers.h  dlgrequests.cpp  dlgrequests.h  main.cpp  mainwindow.cpp  mainwindow.h  okjtypes.cpp  okjtypes.h
src/models/: tablemodelrequests.cpp  tablemodelrequests.h  tablemodelrotation.cpp  tablemodelrotation.h
